Minor style edits
Add back a full stop at the end of the bullet point list.

--- a/docs/developer-resources/welcome.mdx
+++ b/docs/developer-resources/welcome.mdx
@@ -71,7 +71,7 @@ You can also explore Cardano assets using a variety of [explorer tools](/about-c
 To start working with smart contracts, see:
 
 - [Developer portal smart contract tutorials](https://developers.cardano.org/docs/smart-contracts/)
-- [Plutus Core documentation](https://plutus.readthedocs.io/en/latest/index.html)
+- [Plutus Core documentation](https://plutus.readthedocs.io/en/latest/index.html).
 
 There are also many languages you can use to develop smart contracts:
 
@@ -79,7 +79,7 @@ There are also many languages you can use to develop smart contracts:
 - [PlutusTx](https://github.com/IntersectMBO/plutus/tree/master/plutus-tx) (Haskell-based language for high assurance)
 - [Marlowe](https://github.com/input-output-hk/marlowe-cardano) (TypeScript),  [Plu-ts](https://github.com/HarmonicLabs/plu-ts) (TypeScript)
 - [OpShin](https://github.com/OpShin/opshin) (Python)
-- [Scalus](https://github.com/nau/scalus) (Scala)
+- [Scalus](https://github.com/nau/scalus) (Scala).
 
 ## Tools
 
@@ -89,7 +89,7 @@ Explore Cardano's ecosystem:
 - [Builder tools](https://developers.cardano.org/tools/)
 - [Cardano Cube](https://www.cardanocube.com/cardano-ecosystem-interactive-map)
 - [CTimelines](https://www.ctimelines.io)
-- [Built on Cardano](https://builtoncardano.com/)
+- [Built on Cardano](https://builtoncardano.com/).
 
 ## Going further
 
