--- a/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
+++ b/docs/developer-resources/07-release-notes/03-comp-matrix.mdx
@@ -12,11 +12,11 @@ conjunction with the Cardano component dependencies definition.
 If you only require using the node, such as interacting directly with the node
 or managing stake pool operations, we recommend the latest node version. 
 However, if you need compatibility with all components, we recommend using
-version [9.1.0](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.0).
+version [9.1.1](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.1).
 
 | [Cardano node](https://github.com/IntersectMBO/cardano-node/releases)                         | [Cardano DB Sync](https://github.com/IntersectMBO/cardano-db-sync/releases)                                                                                                                                                           | [Cardano Rosetta server](https://github.com/cardano-foundation/cardano-rosetta/releases)                                                                            | [Cardano GraphQL](https://github.com/cardano-foundation/cardano-graphql/releases)                                                                                     | [Cardano wallet](https://github.com/cardano-foundation/cardano-wallet/releases)                                                                                                          |
 | --------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **[9.1.1](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.1)** (fix)            |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       | [v2024-09-03](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-09-03)                                                                                             |
+| **[9.1.1](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.1)** (fix)            | [13.5.0.2](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.5.0.2)                                                                                                                                                     | [2.3.3](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.3.3)                                                                                   | [8.2.2](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.2.2)                                                                                     | [v2024-09-03](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-09-03)                                                                                             |
 | **[9.1.0](https://github.com/IntersectMBO/cardano-node/releases/tag/9.1.0)** (update)         | [13.5.0.0](https://github.com/IntersectMBO/cardano-db-sync/releases/tag/13.5.0.0)                                                                                                                                                     | [2.3.2](https://github.com/cardano-foundation/cardano-rosetta/releases/tag/2.3.2)                                                                                   | [8.2.1](https://github.com/cardano-foundation/cardano-graphql/releases/tag/8.2.1)                                                                                     | [v2024-08-11](https://github.com/cardano-foundation/cardano-wallet/releases/tag/v2024-08-11)                                                                                             |
 | **[9.0.0](https://github.com/IntersectMBO/cardano-node/releases/tag/9.0.0)** (major release)  |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
 | **[8.12.2](https://github.com/IntersectMBO/cardano-node/releases/tag/8.12.2)** (fix)          |                                                                                                                                                                                                                                       |                                                                                                                                                                     |                                                                                                                                                                       |                                                                                                                                                                                          |
