--- a/docs/about-cardano/05-evolution/04-upgrades/07-chang.mdx
+++ b/docs/about-cardano/05-evolution/04-upgrades/07-chang.mdx
@@ -51,7 +51,7 @@ The first stage was completed in August, 2024. Its purpose is to enable initial 
 
 An interim constitution was established with safeguards supported by a technical guardrails script. An interim constitutional committee will oversee the constitutionality of governance actions during the interim period, prior to ratification of a full constitution. The bootstrap period will be used to form the group of DReps. Limited governance actions will be supported, including parameter changes, hard forks, and 'Info' actions.
 
-During the interim period, only SPOs and the interim constitutional committee can vote on governance actions, including possible protocol parameter changes. As an exception, DReps will can participate in 'Info' actions at this stage.
+During the interim period, only SPOs and the interim constitutional committee can vote on governance actions, including possible protocol parameter changes. As an exception, DReps can participate in 'Info' actions at this stage.
 
 The goal of the first stage is to ensure security and continuity during the governance bootstrapping phase, allowing DReps to register and campaign for delegation, while developing and ratifying a final constitution by early 2025.
 
