--- a/docs/about-cardano/05-evolution/04-upgrades/07-chang.mdx
+++ b/docs/about-cardano/05-evolution/04-upgrades/07-chang.mdx
@@ -49,7 +49,7 @@ Chang will be gradually implemented in two stages. The first stage established f
 
 The first stage was completed in August, 2024. Its purpose is to enable initial governance features and lay the groundwork for Conway-era functionality. During this time, DReps can register and ada holders can delegate their voting power. PlutusV3 was introduced, which included new governance features.
 
-An interim constitution was established with safeguards supported by a technical guardrails script. An interim constitutional committee will oversee the constitutionality of governance actions during the interim period, prior to ratification of a full constitution. The bootstrap period will be used to form the group of DReps. Limited governance actions will be supported, including parameter changes, hard forks, and 'Info' actions.
+An [interim constitution](https://docs.intersectmbo.org/cardano/cardano-governance/cardano-constitution/interim-cardano-constitution) was established with safeguards supported by a technical guardrails script. An interim constitutional committee oversees the constitutionality of governance actions during the interim period, prior to ratification of a full constitution. The bootstrap period is used to form the group of DReps. Limited governance actions are supported, including parameter changes, hard forks, and 'Info' actions.
 
 During the interim period, only SPOs and the interim constitutional committee can vote on governance actions, including possible protocol parameter changes. As an exception, DReps can participate in 'Info' actions at this stage.
 
