--- a/docs/pioneer-programs/01-plutus-pioneers.mdx
+++ b/docs/pioneer-programs/01-plutus-pioneers.mdx
@@ -1,19 +1,16 @@
 ---
 title: Plutus Pioneer program
 metaTitle: Plutus Pioneer program
-sidebar_position: 1
+sidebar_position: 2
 ---
 
-> Before you start, note that Plutus Core, Cardano’s native smart contract
-> language, is written in Haskell. Plutus contracts are effectively Haskell
-> programs and that is why it is essential to know the basics of Haskell before
-> enrolling in the Plutus Pioneer program.
+:::info
 
-> In preparation, we recommend that you complete our new self-paced
-> [Haskell Bootcamp](https://github.com/input-output-hk/haskell-course?tab=readme-ov-file#haskell-course) course. This
-> stepping stone course offers unique code examples and interesting exercises
-> that have prepared solutions to help you can learn the fundamentals of
-> Haskell.
+Before starting, note that Plutus Core, Cardano’s native smart contract language, is written in Haskell. Since Plutus contracts are Haskell programs, a basic understanding of Haskell is essential for the Plutus Pioneer program.
+
+Therefore, it is recommended that users complete this self-paced [Haskell Bootcamp](https://github.com/input-output-hk/haskell-course?tab=readme-ov-file#haskell-course) course, which includes unique code examples, engaging exercises, and prepared solutions to learn Haskell fundamentals.
+
+:::
 
 ## What is the Plutus Pioneer program?
 
@@ -32,13 +29,13 @@ in formal methods, programming experience and a general aptitude for logical and
 mathematical thinking are highly desirable. Some prior knowledge of Haskell or
 functional programming is also recommended, as Plutus is heavily based on
 Haskell and includes advanced features like Template Haskell, type-level
-programming, and effect systems. We recommend that you work through **IOGs**
+programming, and effect systems. We recommend that you work through **IO's**
 official [Haskell Course](https://github.com/input-output-hk/haskell-course).
 You can also read the [Learn You a Haskell](http://learnyouahaskell.com/) book.
 
 ## What can I expect to learn?
 
-This course involves approximately ten hours a week of your time and efforts. It
+This course involves approximately ten hours a week of your time and effort. It
 covers the building blocks of Haskell and Plutus, including:
 
 - Functions and data types
@@ -48,9 +45,9 @@ covers the building blocks of Haskell and Plutus, including:
 - Extended UTXO model
 - Working with Plutus (on and off the chain)
 - Minting policies
-- Some case studies and practical exercises
+- Some case studies and practical exercises.
 
-As with all learning experiences, the more you put in the more you will get out!
+As with all learning experiences, the more you put in, the more you will get out!
 
 ## When can I join?
 
