--- a/docs/pioneer-programs/00-education.mdx
+++ b/docs/pioneer-programs/00-education.mdx
@@ -4,7 +4,7 @@ metaTitle: Education overview
 sidebar_position: 1
 ---
 
-## Input | Output (IO) initiatives
+## IO initiatives
 
 Education is a cornerstone of fostering a knowledgeable and engaged global community. By prioritizing education, IO aims to share its expertise and empower individuals to contribute meaningfully to the Cardano ecosystem. Whether you're a developer, an academic, or a business professional, IO educational offerings are designed to equip you with the skills and knowledge needed to thrive in the blockchain space.
 
