--- a/docs/about-cardano/06-contributions.mdx
+++ b/docs/about-cardano/06-contributions.mdx
@@ -17,7 +17,7 @@ You can contribute in several ways, including:
 
 - **Edits**: spot typos or inaccuracies? Fix them!
 - **Feature overviews**: suggest additional overviews or functionality explainers relevant to Cardano
-- **References**: add more references to community-driven projects or resources.
+- **References**: add more references to community-driven projects or resources
 - **Graphics**: contribute with graphics, infographics, etc. Please refer to the [Cardano branding assets](https://cardano.org/brand-assets/) for this.
 
 ## How to contribute?
@@ -51,8 +51,6 @@ To create an issue:
 2. **Create a new issue**: click ‘Issues’ and then ‘New issue’
 3. **Describe the issue**: provide a clear and detailed description of the issue or suggestion
 4. **Submit the issue**: click ‘Submit new issue.’
-
-## Conclusion
 
 Your contributions are vital to maintaining the quality and integrity of Cardano Docs. Whether you’re correcting a typo, adding new content, or suggesting improvements, every contribution helps. Thank you for being an active Cardano community member and helping make Cardano Docs an invaluable resource for everyone.
 
